[gd_scene load_steps=47 format=3 uid="uid://b8miu81cmhpvc"]

[ext_resource type="Script" path="res://script/system/save_manager.gd" id="1_twqey"]
[ext_resource type="Script" path="res://script/system/debate/debate_scene_manager.gd" id="1_ytk5d"]
[ext_resource type="Resource" uid="uid://dxwulhu8iegob" path="res://system/world_state.tres" id="2_qu0xu"]
[ext_resource type="Resource" uid="uid://cdrto07nfohjt" path="res://system/debate_state.tres" id="2_vlsp4"]
[ext_resource type="Resource" uid="uid://cqqs5g0he7n2m" path="res://system/character/ian/ian_memory.tres" id="3_ybk8r"]
[ext_resource type="Script" path="res://script/system/debate/ui/player_hand_ui.gd" id="4_2me35"]
[ext_resource type="Resource" uid="uid://byrpux6co0rrw" path="res://system/character/player/player.tres" id="4_n2ufu"]
[ext_resource type="Resource" uid="uid://d21frda3buspp" path="res://system/character/ian/ian.tres" id="5_8w2te"]
[ext_resource type="Script" path="res://script/ui/fan_sprite_container.gd" id="5_w2i3q"]
[ext_resource type="Texture2D" uid="uid://cg2ynl0d3jijm" path="res://graphic/NineTileRect.png" id="6_hm77o"]
[ext_resource type="PackedScene" uid="uid://chbd27evj5ff5" path="res://prefab/debate/pose_score.tscn" id="8_5x63n"]
[ext_resource type="Texture2D" uid="uid://b7mk3trbstyqw" path="res://graphic/debate/TopicConnector.png" id="8_w2h25"]
[ext_resource type="Texture2D" uid="uid://co0rp83hwgwbk" path="res://graphic/debate/Discard.png" id="9_6vu7p"]
[ext_resource type="Script" path="res://script/system/debate/ui/discard_pile_ui.gd" id="9_fjcny"]
[ext_resource type="Resource" uid="uid://b1vcr8b6vqsw7" path="res://system/pose/doubt.tres" id="9_kxkn0"]
[ext_resource type="Resource" uid="uid://dskq0fe0vu0hx" path="res://system/pose/faith.tres" id="9_ycix3"]
[ext_resource type="Script" path="res://script/system/debate/ui/topic_score.gd" id="10_65wus"]
[ext_resource type="PackedScene" uid="uid://cg87it1f3i6w1" path="res://prefab/debate/card.tscn" id="11_pbp4j"]
[ext_resource type="Texture2D" uid="uid://c6rj07f3bix08" path="res://graphic/debate/DrawPile.png" id="11_to2nb"]
[ext_resource type="Script" path="res://script/system/debate/ui/draw_pile_ui.gd" id="12_7hbmb"]
[ext_resource type="Resource" uid="uid://bao0vshng34g2" path="res://system/pose/self.tres" id="13_87u3u"]
[ext_resource type="Resource" uid="uid://c6656q8j5kypf" path="res://system/pose/others.tres" id="14_2noug"]
[ext_resource type="Resource" uid="uid://beevy52aqog34" path="res://system/character/general/brain/player_brain.tres" id="14_7ti3u"]
[ext_resource type="Script" path="res://script/system/debate/ui/computer_hand_ui.gd" id="14_oh7k4"]
[ext_resource type="Texture2D" uid="uid://8oyydhkdonto" path="res://graphic/debate/Computer.png" id="16_hfwls"]
[ext_resource type="Texture2D" uid="uid://t8i2asm0f1co" path="res://graphic/debate/PlayAreaBackground.png" id="17_8hmqk"]
[ext_resource type="Texture2D" uid="uid://cfnt1d0t3vhv8" path="res://graphic/debate/SpeechBox.png" id="18_at5yn"]
[ext_resource type="Texture2D" uid="uid://bsg2i65ex7g26" path="res://graphic/debate/debate_start_test.png" id="19_n5t7n"]
[ext_resource type="SystemFont" uid="uid://bq3uhh525apgr" path="res://font/jura.tres" id="21_6868b"]
[ext_resource type="Texture2D" uid="uid://cjo0f6nscstvy" path="res://graphic/debate/EnergyPool.png" id="21_jvlp5"]
[ext_resource type="Script" path="res://script/ui/scrolling-text.gd" id="22_3bmb0"]
[ext_resource type="Script" path="res://script/system/debate/ui/energy_pool.gd" id="22_7jpk4"]
[ext_resource type="Script" path="res://script/await_animator.gd" id="22_apgxv"]
[ext_resource type="Resource" uid="uid://c7qk4obnbhvr3" path="res://system/event/event_manager/event_manager.tres" id="25_ul644"]
[ext_resource type="Resource" uid="uid://ca7jjmbm1xpil" path="res://system/debate/main/debate_settings.tres" id="27_ywqqk"]
[ext_resource type="Script" path="res://script/system/event/event_subscriber/debate_event_manager.gd" id="28_qcoiy"]
[ext_resource type="Resource" uid="uid://d3jq0giahpyqx" path="res://system/debate/main/debate_manager.tres" id="30_gydgr"]

[sub_resource type="SystemFont" id="SystemFont_115tp"]
font_names = PackedStringArray("Jura")

[sub_resource type="SystemFont" id="SystemFont_slgg3"]
font_names = PackedStringArray("Jura")

[sub_resource type="Animation" id="Animation_0gytr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1160, 540)]
}

[sub_resource type="Animation" id="Animation_pho32"]
resource_name = "debate_start"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1160, 540), Vector2(1110, 540), Vector2(910, 540), Vector2(860, 540)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [&"on_begin"],
"method": &"emit_signal"
}, {
"args": [&"on_finish"],
"method": &"emit_signal"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_is2vc"]
_data = {
"RESET": SubResource("Animation_0gytr"),
"debate_start": SubResource("Animation_pho32")
}

[sub_resource type="Animation" id="Animation_m3d8s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayArea:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(640, 540)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ContestantArea:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1600, 540)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayArea/DimmingArea:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_qpn6y"]
resource_name = "close_dialogue"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayArea:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(400, 540), Vector2(640, 540)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ContestantArea:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1480, 540), Vector2(1600, 540)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SceneAnimator/AnimationPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [&"on_begin"],
"method": &"emit_signal"
}, {
"args": [&"on_finish"],
"method": &"emit_signal"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ContestantArea/SpeechBox:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayArea/DimmingArea:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0.556863), Color(0, 0, 0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PlayArea/DimmingArea:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_w4si1"]
resource_name = "open_dialogue"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayArea:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(640, 540), Vector2(400, 540)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ContestantArea:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1600, 540), Vector2(1480, 540)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SceneAnimator/AnimationPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [&"on_begin"],
"method": &"emit_signal"
}, {
"args": [&"on_finish"],
"method": &"emit_signal"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ContestantArea/SpeechBox:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayArea/DimmingArea:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.556863)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PlayArea/DimmingArea:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f3av4"]
_data = {
"RESET": SubResource("Animation_m3d8s"),
"close_dialogue": SubResource("Animation_qpn6y"),
"open_dialogue": SubResource("Animation_w4si1")
}

[node name="Root" type="Node2D"]

[node name="SaveManager" type="Node" parent="."]
script = ExtResource("1_twqey")
databases = Array[Resource("res://script/system/database/state_database.gd")]([ExtResource("2_qu0xu"), ExtResource("2_vlsp4"), ExtResource("3_ybk8r")])

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.529412, 0.835294, 0.972549, 1)

[node name="PlayArea" type="Node2D" parent="."]
position = Vector2(640, 540)

[node name="PlayAreaBackground" type="Sprite2D" parent="PlayArea"]
position = Vector2(-640, -540)
texture = ExtResource("17_8hmqk")
offset = Vector2(640, 540)

[node name="Discard" type="Sprite2D" parent="PlayArea"]
position = Vector2(420, -70)
texture = ExtResource("9_6vu7p")
script = ExtResource("9_fjcny")

[node name="ScoreArea" type="Node2D" parent="PlayArea"]
position = Vector2(-155, -80)

[node name="ScoreBoard" type="HBoxContainer" parent="PlayArea/ScoreArea"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -362.0
offset_top = -250.0
offset_right = 362.0
offset_bottom = 252.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 40
alignment = 1

[node name="ReligionTopic" type="VBoxContainer" parent="PlayArea/ScoreArea/ScoreBoard"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="PoseContainer" type="HBoxContainer" parent="PlayArea/ScoreArea/ScoreBoard/ReligionTopic"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 40

[node name="FaithScore" parent="PlayArea/ScoreArea/ScoreBoard/ReligionTopic/PoseContainer" instance=ExtResource("8_5x63n")]
layout_mode = 2
pose = ExtResource("9_ycix3")
segment_count = 8

[node name="DoubtScore" parent="PlayArea/ScoreArea/ScoreBoard/ReligionTopic/PoseContainer" instance=ExtResource("8_5x63n")]
layout_mode = 2
pose = ExtResource("9_kxkn0")
segment_count = 8

[node name="TextureRect" type="TextureRect" parent="PlayArea/ScoreArea/ScoreBoard/ReligionTopic"]
modulate = Color(0.529412, 0.835294, 0.972549, 1)
layout_mode = 2
texture = ExtResource("8_w2h25")
stretch_mode = 3

[node name="PeopleScore" type="VBoxContainer" parent="PlayArea/ScoreArea/ScoreBoard"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20
script = ExtResource("10_65wus")

[node name="PoseContainer" type="HBoxContainer" parent="PlayArea/ScoreArea/ScoreBoard/PeopleScore"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 40

[node name="SelfScore" parent="PlayArea/ScoreArea/ScoreBoard/PeopleScore/PoseContainer" instance=ExtResource("8_5x63n")]
layout_mode = 2
pose = ExtResource("13_87u3u")
segment_count = 8

[node name="OthersScore" parent="PlayArea/ScoreArea/ScoreBoard/PeopleScore/PoseContainer" instance=ExtResource("8_5x63n")]
layout_mode = 2
pose = ExtResource("14_2noug")
segment_count = 8

[node name="TextureRect" type="TextureRect" parent="PlayArea/ScoreArea/ScoreBoard/PeopleScore"]
modulate = Color(0.529412, 0.835294, 0.972549, 1)
layout_mode = 2
texture = ExtResource("8_w2h25")
stretch_mode = 3

[node name="ComputerHand" type="Marker2D" parent="PlayArea" node_paths=PackedStringArray("discard")]
position = Vector2(430, -940)
script = ExtResource("14_oh7k4")
card_prefab = ExtResource("11_pbp4j")
discard = NodePath("../Discard")

[node name="Clock" type="NinePatchRect" parent="PlayArea"]
offset_left = 245.0
offset_top = -540.0
offset_right = 645.0
offset_bottom = -390.0
texture = ExtResource("6_hm77o")
region_rect = Rect2(2.08165e-12, 2.08165e-12, 50, 50)
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="Text" type="RichTextLabel" parent="PlayArea/Clock"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 26.0
offset_right = 1.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.529412, 0.835294, 0.972549, 1)
theme_override_fonts/normal_font = SubResource("SystemFont_115tp")
theme_override_font_sizes/normal_font_size = 72
bbcode_enabled = true
text = "[center]08:30"
scroll_active = false

[node name="EnergyPool" type="Sprite2D" parent="PlayArea"]
position = Vector2(-600, 280)
texture = ExtResource("21_jvlp5")
offset = Vector2(64, 2.08165e-12)
script = ExtResource("22_7jpk4")

[node name="AmountLabel" type="RichTextLabel" parent="PlayArea/EnergyPool"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -48.0
offset_bottom = -88.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.6, 0.827451, 0.956863, 1)
theme_override_fonts/normal_font = SubResource("SystemFont_slgg3")
theme_override_font_sizes/normal_font_size = 72
bbcode_enabled = true
text = "[center]3"
scroll_active = false

[node name="Draw" type="Sprite2D" parent="PlayArea"]
position = Vector2(-600, 540)
texture = ExtResource("11_to2nb")
offset = Vector2(125, 2.08165e-12)
script = ExtResource("12_7hbmb")

[node name="CountLabel" type="RichTextLabel" parent="PlayArea/Draw"]
anchors_preset = -1
anchor_left = 0.16
anchor_top = 0.154
anchor_right = 0.84
anchor_bottom = 0.406
offset_top = -174.9
offset_bottom = -175.1
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.6, 0.827451, 0.956863, 1)
theme_override_fonts/normal_font = ExtResource("21_6868b")
theme_override_font_sizes/normal_font_size = 72
bbcode_enabled = true
text = "[center]45"
scroll_active = false

[node name="PlayerHand" type="Marker2D" parent="PlayArea" node_paths=PackedStringArray("card_container", "discard_pile")]
position = Vector2(145, 460)
script = ExtResource("4_2me35")
player_brain = ExtResource("14_7ti3u")
debate_settings = ExtResource("27_ywqqk")
card_container = NodePath("FanSpriteContainer")
discard_pile = NodePath("../Discard")
card_prefab = ExtResource("11_pbp4j")

[node name="FanSpriteContainer" type="Node2D" parent="PlayArea/PlayerHand"]
script = ExtResource("5_w2i3q")
container_width = 910.0
preferred_margin = 200

[node name="DimmingArea" type="ColorRect" parent="PlayArea"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -640.0
offset_top = -540.0
offset_right = 640.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.556863)

[node name="ContestantArea" type="Node2D" parent="."]
position = Vector2(1600, 540)

[node name="Computer" type="Sprite2D" parent="ContestantArea"]
position = Vector2(0, 540)
texture = ExtResource("16_hfwls")
offset = Vector2(2.08165e-12, -319)

[node name="AnimationPlayer" type="AnimationPlayer" parent="ContestantArea/Computer"]
script = ExtResource("22_apgxv")

[node name="SpeechBox" type="Sprite2D" parent="ContestantArea"]
position = Vector2(0, -260)
texture = ExtResource("18_at5yn")

[node name="ScrollingText" type="RichTextLabel" parent="ContestantArea/SpeechBox"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.712
offset_left = -231.0
offset_top = -197.0
offset_right = -268.0
offset_bottom = -223.04
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("21_6868b")
theme_override_font_sizes/normal_font_size = 54
bbcode_enabled = true
script = ExtResource("22_3bmb0")
centiseconds_between_characters = 5.0

[node name="DebateStartGraphic" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(0, 0, 0, 1)
position = Vector2(1160, 540)
texture = ExtResource("19_n5t7n")

[node name="AnimationPlayer" type="AnimationPlayer" parent="DebateStartGraphic"]
libraries = {
"": SubResource("AnimationLibrary_is2vc")
}
script = ExtResource("22_apgxv")

[node name="====================================================" type="Node" parent="."]

[node name="SceneAnimator" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="SceneAnimator"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_f3av4")
}
script = ExtResource("22_apgxv")

[node name="EventManager" type="Node2D" parent="." node_paths=PackedStringArray("scrolling_text")]
script = ExtResource("28_qcoiy")
scrolling_text = NodePath("../ContestantArea/SpeechBox/ScrollingText")
manager = ExtResource("25_ul644")

[node name="DebateManager" type="Node2D" parent="." node_paths=PackedStringArray("debate_start_animator", "computer_hand_ui", "player_hand_ui", "energy_pool", "draw_pile_ui")]
script = ExtResource("1_ytk5d")
debate_settings = ExtResource("27_ywqqk")
player = ExtResource("4_n2ufu")
computer = ExtResource("5_8w2te")
debate_start_animator = NodePath("../DebateStartGraphic/AnimationPlayer")
computer_hand_ui = NodePath("../PlayArea/ComputerHand")
player_hand_ui = NodePath("../PlayArea/PlayerHand")
energy_pool = NodePath("../PlayArea/EnergyPool")
draw_pile_ui = NodePath("../PlayArea/Draw")
event_manager = ExtResource("25_ul644")
manager = ExtResource("30_gydgr")
